--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,7 +32,7 @@
   PAGE: ABOUT
   ***********************************/
   
-  .profile-photo {
+  #profile-photo {
     float: left;
     margin: 0 5% 80px 0;
   }
