--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,22 @@ nav a {
   padding: 15px 10px;
 }
 
+nav ul li:hover ul{
+	display: block;
+}
+
+nav ul ul{
+	display: none;
+	position:absolute;
+	border-radius: 5%;
+}
+
+nav ul ul li{
+	display: block;
+	margin: 5px 0px;
+	border-color: #599a68;
+}
+
 
 
 /**********************************
@@ -219,7 +235,10 @@ nav a.selected, nav a:hover {
   color: #32673f;
 }
 
-
+nav ul ul{
+	background-color: #6ab47b;
+	border-color: #599a68;
+}
 
 
 
