--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,7 @@
   #primary {
     width: 50%;
     float: left;
+	padding: 0 0 0 10px
   }
   
   #secondary {
@@ -24,7 +25,7 @@
     width: 28.3333%;
   }
   
-  #gallery li:nth-child(4n) {
+  #gallery li:nth-child(5n) {
     clear: left;
   }
   
